# boat3d

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
c/: main.c
java/lib/: lwjgl-release-custom-zip.json
java/src/: Camera.java  Main.java  Window.java
rust/: Cargo.toml  main.rs
rust/block/: blockface.rs  blockmodel.rs  blockstate.rs
rust/shader/: geometry.glsl.frag  geometry.glsl.vert  post.glsl.frag  post.glsl.vert  shader.frag  shader.glsl.frag  shader.glsl.vert  shader.vert
rust/util/: buffer.rs  byte_buffer.rs  gl_helper.rs  mod.rs
rust/world/: camera.rs  chunk.rs  world.rs
src/: Camera.java  Main.java  Window.java  lib.rs  main.rs
src/block/: AirBlock.java  Block.java  BlockAttribute.java  BlockModel.java  BlockProperty.java  BlockRegistry.java  BlockState.java  GrassBlock.java  SlabBlock.java  WoolBlock.java  block.rs  blockface.rs  blockmodel.rs  blockstate.rs  mod.rs  normal.rs
src/boat/: Camera.java  Main.java  Window.java
src/cull/: bounding_box.rs  frustum.rs  frustum_cull.rs  math.rs  mod.rs  rasterizer.rs
src/entity/: mod.rs  model_box.rs  model_part.rs
src/gl_util/: buffer.rs  buffer_allocator.rs  fps_tracker.rs  framebuffer.rs  gl_helper.rs  gl_wrapper.rs  mod.rs  program.rs  renderbuffer.rs  shader.rs  texture.rs
src/mesh/: buffer_quad.rs  byte_buffer.rs  gpu_quad.rs  mod.rs
src/render/: buffer_quad.rs  byte_buffer.rs  frustum_cull.rs  mod.rs  world_renderer.rs
src/shader/: geometry.glsl.frag  geometry.glsl.vert  post.glsl.frag  post.glsl.vert  shader.frag  shader.vert  solid.glsl.frag  solid.glsl.vert  trans.glsl.frag  translucent.glsl.frag  translucent.glsl.vert
src/util/: FileHelper.java  GlHelper.java  OpenSimplexNoise.java  byte_buffer.rs
src/world/: Chunk.java  mod.rs  (+10 more)
zig/: build.zig
(+82 files in other folders)
