[package]
name = "boat3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd.git", features = ["all_lane_counts"] }
std_float = { git = "https://github.com/rust-lang/portable-simd.git" }
gl = "0.14.0"
simdnoise = "3.1.6"
rand = "*"
cgmath = "^0.16"
itertools = "0.11.0"
jni = "0.21.1"

[dependencies.glfw]
version = "*"
default-features = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 3
debug = false
overflow-checks = false

[lib]
crate_type = ["cdylib"]
name = "boat3dlib"