[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust"
path = "main.rs"

[dependencies]
gl = "0.14.0"
libc = "0.2.139"
log = "0.4.17"
simdnoise = "3.1.6"
ultraviolet = "0.9.0"
rand = "*"

[dependencies.glfw]
version = "*"
default-features = false

[profile.release]
_lto = true
_codegen-units = 1
_strip = false

[profile.bench]
debug = true
strip = false
